<resources>
    <string name="app_name">"MySEPTA"</string>
    <string name="title_section1">Favorites</string>
    <string name="title_section2">Rail</string>
    <string name="title_section3">Bus</string>
    <string name="title_section4">Subway</string>
    <string name="tab_home_title">Favorites</string>
    <string name="tab_rail_title">Rail</string>
    <string name="tab_bus_title">Bus</string>
    <string name="tab_subway_title">Subway</string>
    <string name="title_activity_maps">Map</string>
    <string name="action_settings">Settings</string>
    <string-array name="drawer_items">
        <item>Alerts</item>
        <item>Talk to the Team</item>
        <item>Septa\'s Twitter</item>
        <item>Settings</item>
    </string-array>
    <string name="openDrawer"> Open navigation drawer</string>
    <string name="closeDrawer"> Close navigation drawer</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="pref_send_report">Send crash reports</string>
    <string name="pref_send_report_summary">Helps to fix bugs</string>
    <string name="pref_sync_frequency">Sync frequency</string>
    <string name="pref_sync_frequency_summary">Set the sync frequency</string>
    <string name="pref_user_name">Set username</string>
    <string name="pref_user_name_summary">Set your username</string>
    <string name="pref_user_profile">User Profile</string>
    <string name="pref_update_setting">Update Settings</string>
    <string name="from_rail_text">Starting Station</string>
    <string name="to_rail_text">Ending Station</string>
    <string name="live_rail_label"><b>Live Schedule Planner</b></string>
    <string name="map_rail_label"><b>Train View</b></string>
    <string name="static_rail_header"><u><b>Schedules</b></u></string>
    <string name="train_number"><u><b>Train</b></u></string>
    <string name="departure_time"><u><b>Departure</b></u></string>
    <string name="arrival_time"><u><b>Arrival</b></u></string>
    <string name="weekday">Weekday</string>
    <string name="saturday">Saturday</string>
    <string name="sunday">Sunday</string>
    <string name="loc_tag">location_tag</string>
    <string name="name_tag">name_tag</string>
    <string name="subway_favorites_key">mysepta.com.capstone.team5.subway</string>
    <string name="rail_favorites_key">mysepta.com.capstone.team5.rail</string>
    <string name="favorites_key">mysepta.com.capstone.team5</string>
    <string name="STOP_ID_KEY">StopID</string>
    <string name="LOCATION_KEY">Location</string>
    <string name="DIRECTION_KEY">Direction</string>
    <string name="LINE_KEY">Line</string>
    <string-array name="travel_modes">
        <item> generic </item>
        <item> Regional Rail</item>
        <item> Market Frankford Line</item>
        <item> Broad Street Line</item>
    </string-array>
    <string-array name="broad_street_line">
        <item>8th St &amp; Market St</item>
        <item>Allegheny</item>
        <item>AT&amp;T</item>
        <item>Cecil B Moore</item>
        <item>Chinatown</item>
        <item>City Hall</item>
        <item>Ellsworth-Federal</item>
        <item>Erie</item>
        <item>Fairmount</item>
        <item>Fern Rock Transportation Center</item>
        <item>Girard</item>
        <item>Hunting Park</item>
        <item>Logan</item>
        <item>Lombard-South</item>
        <item>North Philadelphia</item>
        <item>Olney Transportation Center</item>
        <item>Oregon</item>
        <item>Race-Vine</item>
        <item>Snyder</item>
        <item>Spring Garden</item>
        <item>Susquehanna-Dauphin</item>
        <item>Tasker-Morris</item>
        <item>Walnut-Locust</item>
        <item>Wyoming</item>
    </string-array>
    <string-array name="broad_street_line_sorted">
        <item>Fern Rock Transportation Center</item>
        <item>Olney Transportation Center</item>
        <item>Logan</item>
        <item>Wyoming</item>
        <item>Hunting Park</item>
        <item>Erie</item>
        <item>Allegheny</item>
        <item>North Philadelphia</item>
        <item>Susquehanna-Dauphin</item>
        <item>Cecil B Moore</item>
        <item>Girard</item>
        <item>Fairmount</item>
        <item>8th St &amp; Market St</item>
        <item>Chinatown</item>
        <item>Spring Garden</item>
        <item>Race-Vine</item>
        <item>City Hall</item>
        <item>Walnut-Locust</item>
        <item>Lombard-South</item>
        <item>Ellsworth-Federal</item>
        <item>Tasker-Morris</item>
        <item>Snyder</item>
        <item>Oregon</item>
        <item>AT&amp;T</item>
    </string-array>
    <string-array name="market_frankford_line">
        <item>11th St</item>
        <item>13th St</item>
        <item>15th St</item>
        <item>2nd St</item>
        <item>30th St</item>
        <item>34th St</item>
        <item>40th St</item>
        <item>46th St</item>
        <item>52nd St</item>
        <item>56th St</item>
        <item>5th St</item>
        <item>60th St</item>
        <item>63rd St</item>
        <item>69th Street Transportation Center</item>
        <item>8th St</item>
        <item>Allegheny</item>
        <item>Arrott Transportation Center</item>
        <item>Berks</item>
        <item>Church</item>
        <item>Erie-Torresdale</item>
        <item>Frankford Transportation Center</item>
        <item>Girard</item>
        <item>Huntingdon</item>
        <item>Millbourne</item>
        <item>Somerset</item>
        <item>Spring Garden</item>
        <item>Tioga</item>
        <item>York-Dauphin</item>
    </string-array>
    <string-array name="market_frankford_line_sorted">
        <item>69th Street Transportation Center</item>
        <item>Millbourne</item>
        <item>63rd St</item>
        <item>60th St</item>
        <item>56th St</item>
        <item>52nd St</item>
        <item>46th St</item>
        <item>40th St</item>
        <item>34th St</item>
        <item>30th St</item>
        <item>15th St</item>
        <item>13th St</item>
        <item>11th St</item>
        <item>8th St</item>
        <item>5th St</item>
        <item>2nd St</item>
        <item>Spring Garden</item>
        <item>Girard</item>
        <item>Berks</item>
        <item>York-Dauphin</item>
        <item>Huntingdon</item>
        <item>Somerset</item>
        <item>Allegheny</item>
        <item>Tioga</item>
        <item>Erie-Torresdale</item>
        <item>Church</item>
        <item>Arrott Transportation Center</item>
        <item>Frankford Transportation Center</item>
    </string-array>
    <string name="title_activity_subway">SubwayActivity</string>
    <string-array name="rail_names">
        <item>Airport</item>
        <item>Chestnut Hill East</item>
        <item>Chestnut Hill West</item>
        <item>Cynwyd</item>
        <item>Fox Chase</item>
        <item>Glenside</item>
        <item>Lansdale/Doylestown</item>
        <item>Media/Elwyn</item>
        <item>Manayunk/Norristown</item>
        <item>Paoli/Thorndale</item>
        <item>Trenton</item>
        <item>Warminster</item>
        <item>Wilmington/Newark</item>
        <item>West Trenton</item>
    </string-array>
    <string-array name="rail_acro">
        <item>AIR</item>
        <item>CHE</item>
        <item>CHW</item>
        <item>CYN</item>
        <item>FOX</item>
        <item>GC</item>
        <item>LAN</item>
        <item>MED</item>
        <item>NOR</item>
        <item>PAO</item>
        <item>TRE</item>
        <item>WAR</item>
        <item>WIL</item>
        <item>WTR</item>
    </string-array>
    <string name="general">General</string>
    <string name="regionalrail">Rail</string>
    <string name="subway">Subway</string>
    <string name="bus">Bus</string>
</resources>