<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <include
        android:id="@+id/rail_static_tool_bar"
        layout="@layout/rail_static_toolbar"
        ></include>

    <info.hoang8f.android.segmented.SegmentedGroup
        xmlns:segmentedgroup="http://schemas.android.com/apk/res-auto"
        android:id="@+id/segmentedDays"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:orientation="horizontal"
        segmentedgroup:sc_border_width="2dp"
        segmentedgroup:sc_corner_radius="10dp"
        android:checkedButton="@+id/weekdayButton">

        <RadioButton
            android:id="@+id/weekdayButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/weekday"
            style="@style/RadioButton" />

        <RadioButton
            android:id="@+id/saturdayButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/saturday"
            style="@style/RadioButton" />

        <RadioButton
            android:id="@+id/sundayButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/sunday"
            style="@style/RadioButton" />
    </info.hoang8f.android.segmented.SegmentedGroup>

    <ExpandableListView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:id="@+id/railstaticlistview">
    </ExpandableListView>

    <FrameLayout
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/staticschedulefrag">

    </FrameLayout>

</LinearLayout>